@@ -1,0 +1,145 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!--// $Id$ //-->
+<html><head>
+<meta name="GENERATOR" content="LMS {$layout.lmsv}">
+<meta http-equiv="Content-Language" content="{$LANGDEFS.$_ui_language.html}">
+<meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_ui_language.charset}">
+<title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle} :{/if}::</title>
+<link href="img/style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="img/common.js"></SCRIPT>
+</head>
+<body>
+<div id="overDiv" style="position:absolute; visibility:hidden; z-index:100;"></div>
+<script type="text/javascript" language="JavaScript" src="img/overlib.js"></script>
+<script type="text/javascript">
+<!--
+	
+	var ndspDict = {};
+
+	function SaveForm()
+	{
+		var result = '';
+		var inputTags = document.getElementsByTagName('input');
+
+		for (var i=0; i<inputTags.length; i++)
+		{
+			if (inputTags[i].type='radio' 
+					&& inputTags[i].name.lastIndexOf('nd',0)===0 
+					&& inputTags[i].checked) {
+				if (result!='') {
+					result += ',';
+				}
+				result += inputTags[i].value;
+			}
+		}
+		window.parent.location='?m=netdevedit&action=replace&id={$objectid}&netdev='+result;
+		window.parent.popclick();
+	}
+
+	function CloseForm() {
+		window.parent.popclick();
+	}
+
+	function FilterForm() {
+		var txt = document.getElementById('flt').value;
+		if (txt.trim() != '') {
+			txt = txt.toLowerCase();
+			var rows = document.getElementsByTagName('tr');
+			for (var i=0; i<rows.length; i++)
+			{
+				if (rows[i].id.lastIndexOf('ndsp',0)===0) {
+					if (ndspDict[rows[i].id] != '' && ndspDict[rows[i].id].lastIndexOf(txt,0) != 0) {
+						rows[i].style.display = 'none';
+					} else {
+						rows[i].style.display = '';
+					}
+				}
+			}
+		} else {
+			var rows = document.getElementsByTagName('tr');
+			for (var i=0; i<rows.length; i++) {
+				if (rows[i].id.lastIndexOf('ndsp',0)===0) {
+				  rows[i].style.display = '';
+				}
+			}
+		}
+	}
+//-->
+</script>
+<table cellpadding="5" width="100%">
+	<tr>
+		<td class="fall dark" align="center">
+			<B>{trans("Select from list device for replacement")}</B>
+		</td>
+	</tr>
+</table>
+<form name="netdevlist">
+<div style="overflow:auto;height:235px;">
+<table width="100%" cellpadding="3" id="table">
+	{cycle values="light,lucid" print=false}
+	{if $netdevlist.total > 0}
+	{section name=netdevlist loop=$netdevlist}
+	{if $netdevlist[netdevlist].id}
+	<script type="text/javascript">
+	<!--
+		ndspDict['ndsp{$netdevlist[netdevlist].id}'] = '{$netdevlist[netdevlist].name}'.toLowerCase();
+	//-->
+	</script>
+	<tr class="highlight {cycle}"  id="ndsp{$netdevlist[netdevlist].id}" >
+		<td width="1%">
+			<input type="radio" group="group1" class="box {cycle print=false}{cycle}" name="ndlist" id="nd{$netdevlist[netdevlist].id}" value="{$netdevlist[netdevlist].id}"> 
+		</td>
+		<td width="99%" style="vertical-align: top;">
+			<table width="100%">
+
+			    <tr>
+				<td width="1%"><img src="img/netdev.gif" alt=""></td>
+				<td width="99%"><b>{$netdevlist[netdevlist].name}</b></td>
+				<td width="1%"><img src="img/producer.gif" alt=""></td>
+				<td width="99%"><nobr>{$netdevlist[netdevlist].producer} / {$netdevlist[netdevlist].model} </nobr></td>
+			    </tr>
+			    {if $netdevlist[netdevlist].location}
+			    <tr>
+				<td width="1%"><img src="img/home.gif" alt=""></td>
+				<td width="99%"><nobr>{$netdevlist[netdevlist].location|truncate:60:"...":true}</nobr></td>
+			    </tr>
+			    {/if}
+			</table>
+		</td>
+	</tr>
+	{/if}
+	{/section}
+	{else}
+	<tr>
+		<td width="100%" colspan="3" align="center">
+			<p>&nbsp;</p>
+			<p><b>{trans("Net devices are missing.")}</b></p>
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+	{/if}
+</table>
+</div>
+<table  style="width:100%;" id="panel" >
+	<tr>
+		<td width="100%" colspan="3" align="center">
+		    <table width="100%" cellpadding="3" id="table">
+			<tr>
+				<td align="left" class="fall dark">
+					<nobr><img src="img/cancel.gif" alt=""> <a href="javascript:CloseForm()">{trans("Cancel")} </a></nobr>
+			    	</td>
+			    <td class="fall dark">
+				    <IMG src="img/search.gif" ALT="{trans('Filter devices by name')}"/> <INPUT TYPE="text" NAME="flt" ID="flt" {tip text="Filter devices by name"} onkeyup="FilterForm();"/> 
+			    </td>
+			    
+			    <td align="right" class="fall dark">
+				<nobr><a href="javascript:SaveForm()">{trans("Replace")} <img src="img/save.gif" alt=""></a></nobr>
+			    </td>
+			</tr>
+		    </table>
+		</td>
+	</tr>
+</table>
+</form>
+</body>
+</html>
